fix align text sidenav

--- a/src/App.scss
+++ b/src/App.scss
@@ -60,6 +60,7 @@ img {
 .sidenav ul {
   display: flex;
   flex-direction: column;
+  text-align: center;
   gap: 50px;
   list-style-type: none;
   margin-top: 50px;
